# wavespp

./: .gitignore  .gitlab-ci.yml  .travis.yml  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
CMake/modules/: coda-config.cmake  jsoncpp-config.cmake  waves_c-config.cmake
src/: address.cpp  address.hpp  utils.cpp  utils.hpp  version.h.in
src/tx/: alias.cpp  alias.hpp  base.cpp  base.hpp  burn.cpp  burn.hpp  data.cpp  data.hpp  exchange.cpp  exchange.hpp  invoke_script.cpp  invoke_script.hpp  issue.cpp  issue.hpp  lease.cpp  lease.hpp  lease_cancel.cpp  lease_cancel.hpp  mass_transfer.cpp  mass_transfer.hpp  order.cpp  order.hpp  reissue.cpp  reissue.hpp  set_asset_script.cpp  set_asset_script.hpp  set_script.cpp  set_script.hpp  sponsorship.cpp  sponsorship.hpp  transfer.cpp  transfer.hpp
tests/: test_address.cc  test_base58.cc  test_exchange_tx.cc  test_invoke_script_tx.cc  test_mass_transfer_tx.cc
